examples/test/testpolicy7140.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7140
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key26: value18
      key13: value9
      key23: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value23
          key35: value10
      podSelector:
        matchLabels:
          key12: value15
          key4: value49
